changes ma the odd section to secondary-bg

--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,7 @@ p {
 }
 
 .section:nth-child(odd) {
-    background-color: var(--secondary-color);
+    background-color: var(--secondary-bg);
     color: var(--text-light);
 }
 
