--- a/styles.css
+++ b/styles.css
@@ -218,9 +218,9 @@ nav a:hover {
     margin: 10px;
     padding: clamp(.5rem, 1vw, 1rem);
     text-align: center;
-    border: 1px solid var(--border-dark);
-    background-color: var(--text-accent); /* Your primary button color */
-    color: var(--text-dark);
+    border: 1px solid var(--border-light);
+    background-color: var(--primary-color); /* Your primary button color */
+    color: var(--text-light);
     border: 1px solid var(--border-light);
     border-radius: 100px;
     cursor: pointer;
@@ -229,8 +229,8 @@ nav a:hover {
 }
 
 .hero-content button:first-of-type:hover {
-    background-color: var(--primary-color);
-    color: var(--text-light);
+    background-color: var(--secondary-color);
+    color: var(--text-dark);
     border: 1px solid var(--border-dark);
 }
 
@@ -292,8 +292,8 @@ nav a:hover {
     min-height: fit-content;
     padding: 2rem;
     display: flex;
-    flex-direction: column;
     justify-content: center;
+    flex-direction: column;
 }
 
 .header {
@@ -323,8 +323,9 @@ nav a:hover {
 
 .left-side button {
     width: clamp(70px, 150px, 250px);
-    background-color: var(--text-accent); /* Your primary button color */
-    color: var(--text-dark);
+    height: 50px;
+    background-color: var(--primary-color); /* Your primary button color */
+    color: var(--text-light);
     border-radius: 100px;
     cursor: pointer;
     font-size: 1rem;
@@ -390,11 +391,27 @@ nav a:hover {
     color: var(--text-accent);
 }
 
+.section:nth-child(5) {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 2rem;
+}
+/* Adjust Container Width for Smaller Screens */
+.feedback-container { 
+    width: 60%;
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    gap: 2rem;
+    height: fit-content;
+    text-align: center;
+}
+
 /* General Form Styling */
 .inputs input,
 .inputs select,
-.feedback-container form textarea,
-.feedback-container form button {
+.feedback-container .form1 textarea {
     width: 100%;
     padding: 0.75rem;
     box-sizing: border-box;
@@ -405,23 +422,98 @@ nav a:hover {
     color: var(--text-light);
 }
 
-.feedback-container form button {
+.feedback-container .form1 button {
+    padding: 0.75rem;
+    border: 1px solid var(--border-light);
+    border-radius: 5px;
     background-color: var(--primary-color);
+    color: var(--text-light);
     cursor: pointer;
     transition: background-color 0.3s ease;
 }
 
-.feedback-container form {
-    width: 100%;
+.feedback-container .form1 {
+    border: 1px solid var(--border-light);
     box-sizing: border-box;
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
-    gap: 1rem;
+    gap: 1.5rem;
+    padding: 1.5rem;
 }
 
-.feedback-container form button:hover {
-    background-color: var(--secondary-color);
+.feedback-container .form2 {
+    width: 100%;
+    padding: 1.5rem;
+    border: 1px solid var(--border-light);
+    color: var(--text-light);
+    background-color: var(--tertiary-bg);
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 1rem;
+    padding: 2rem;
+}
+
+.feedback-container .form1 h3 {
+    font-size: 1.5rem;
+    font-size: clamp(1.5rem, 1.368421052631579rem + 0.5263157894736842vw, 2rem);
+    color: var(--text-accent);
+    text-transform: uppercase;
+}
+
+.feedback-container .form1 p {
+    font-size: 0.875rem;
+    font-size: clamp(0.875rem, 0.8421052631578947rem + 0.13157894736842105vw, 1rem);
+}
+
+.feedback-container .form2 h3 {
+    font-size: 1.2rem;
+    font-size: clamp(1.2rem, 1.1210526315789473rem + 0.31578947368421056vw, 1.5rem);
+    text-transform: uppercase;
+    color: var(--text-accent);
+}
+
+.feedback-container .form2 p {
+    font-size: 0.875rem;
+    font-size: clamp(0.875rem, 0.8421052631578947rem + 0.13157894736842105vw, 1rem);
+}
+
+.inputs-form2 {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    gap: .5rem;
+}
+
+.inputs-form2 input {
+    background-color: var(--tertiary-bg);
+    padding: 0.75rem;
+    box-sizing: border-box;
+    font-size: 1rem;
+    border: 1px solid var(--border-light);
+    border-radius: 5px;
+}
+
+.inputs-form2 > *{
+    padding: .5rem;
+    flex: 1;
+}
+
+.inputs-form2 button {
+    background-color: var(--primary-color);
+    color: var(--text-light);
+    padding: 0.75rem;
+    border: 1px solid var(--border-light);
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+
+.feedback-container .form1 button:hover {
+    background-color: var(--primary-color);
+    color: var(--text-light);
 }
 
 
@@ -444,36 +536,37 @@ nav a:hover {
 }
 
 .inputs input::placeholder {
-    color: var(--text-accent);
+    color: var(--text-muted);
     opacity: 1; /* Firefox */
   }
   
   ::-ms-input-placeholder { /* Edge 12-18 */
-    color: var(--text-accent);
+    color: var(--text-muted);
   }
 
 
-.section:nth-child(5) {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 2rem;
-}
-/* Adjust Container Width for Smaller Screens */
-.feedback-container {
-    display: flex;
-    flex-direction: column;
-    gap: 2rem;
-    align-content: center;
-    justify-content: center;
-    width: 50%; /* Default width for larger screens */
-    height: fit-content;
-    padding: 2rem;
-    text-align: center;
-    border: 1px solid var(--border-light);
+
+
+.footer {
+    background-color: #181A2F;
+    color: #F5F5F5;
+    padding: 40px 20px;
+    
 }
 
+.footer-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 100%;
+    flex-wrap: wrap;
+}
+
+@media (max-width: 1260px) {
+    .feedback-container {
+        width: 80%;
+    }
+}
 
 @media (max-width: 1100px) {
     .left-side {
@@ -482,6 +575,17 @@ nav a:hover {
 
     .calis-container {
         width: 100%;
+    }
+
+    .feedback-container {
+        width: 80%;
+    }
+}
+
+@media (max-width: 1000px) {
+    .feedback-container {
+        width: 50%;
+        grid-template-columns: 1fr;
     }
 }
 
@@ -585,12 +689,20 @@ nav a:hover {
     .feedback-container {
         width: 100%; /* Almost full-width for small screens */
         padding: 0;
+    }
+
+    .feedback-container .form1 {
+        display: flex;
+        padding: 0;
+        width: 100%;
         border: none;
     }
 
-    .feedback-container form {
-        display: flex;
+    .feedback-container .form2 {
+        background-color: transparent;
+        padding: 0;
         width: 100%;
+        border: none;
     }
 
     .inputs {
