--- a/styles.css
+++ b/styles.css
@@ -37,11 +37,6 @@ body, html {
     scroll-behavior: smooth;
 }
 
-li,
-p {
-    overflow-wrap: break-word; /* Ensures long words break properly */
-    word-break: break-word;
-}
 
 .section:nth-child(even) {
     background-color: var(--primary-bg);
@@ -92,6 +87,8 @@ nav a:hover {
     transition: 0.3s ease;
 }
 
+
+
 .sidebar {
     position: fixed;
     top: 0;
@@ -106,11 +103,6 @@ nav a:hover {
     align-items: flex-start;
     justify-content: flex-start;
     transition: right 0.3s ease;
-    
-}
-
-.sidebar.clicked {
-    filter: brightness(100%);
 }
 
 .sidebar li {
@@ -408,19 +400,27 @@ nav a:hover {
 
 .calis-container .card {
     display: flex;
+    padding: 1rem;
+    min-height: 100%;
     flex-direction: column;
     gap: 1rem;
-    padding: 1.5rem;
-    font-size: 0.875rem;
-    font-size: clamp(0.875rem, 0.8421052631578947rem + 0.13157894736842105vw, 1rem);
     background-color: var(--tertiary-bg); 
     border: 1px solid var(--border-light);
 }
 
+.card p {
+    width: 100%;
+    padding: 0.5rem;
+    font-size: 0.875rem;
+    font-size: clamp(0.875rem, 0.8421052631578947rem + 0.13157894736842105vw, 1rem);
+}
+
 .card p:has(strong) {
+    background: linear-gradient(45deg, #181A2F, #B4182D);
     font-size: 1.1rem;
     font-size: clamp(1.1rem, 1.0473684210526317rem + 0.21052631578947364vw, 1.3rem);
-    color: var(--text-accent);
+    color: var(--text-muted);
+    text-align: center;
 }
 
 .section:nth-child(5) {
@@ -468,7 +468,6 @@ nav a:hover {
     border: 1px solid var(--border-light);
     box-sizing: border-box;
     display: flex;
-    flex-wrap: wrap;
     flex-direction: column;
     gap: 1.5rem;
     padding: 1.5rem;
@@ -560,14 +559,6 @@ nav a:hover {
     flex: 1; /* Equal space for each input and select */
 }
 
-.inputs input[type="email"] {
-    flex: 0 0 50%;
-}
-
-.inputs input[type="number"] {
-    flex: 0 0 15%;
-}
-
 .inputs input::placeholder {
     color: var(--text-muted);
     opacity: 1; /* Firefox */
@@ -594,6 +585,8 @@ nav a:hover {
     max-width: 100%;
     flex-wrap: wrap;
 }
+
+
 
 @media (max-width: 1260px) {
     .feedback-container {
@@ -651,6 +644,7 @@ nav a:hover {
         grid-template-rows: repeat(2, 1fr); /* Maintain single row layout */
         gap: 2rem; /* Space between cards */
         scroll-behavior: smooth; /* Enable smooth scrolling */
+        
     }
 
     .calis-container .card {
@@ -664,9 +658,11 @@ nav a:hover {
         align-items: center; /* Center content */
         gap: 2rem;
         border-radius: 10px; /* Add rounded corners for aesthetics */
-        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Add shadow for depth */
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+ 
     }
-}
+
+
 
 @media (max-width: 730px) {
     .section:first-child {
@@ -794,4 +790,5 @@ nav a:hover {
         padding: 1rem;
         text-align: center;
     }
+}
 }
